--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     Sint-Lievenscollege Gent / AI in de Klas.
     Niet verspreiden zonder naamsvermelding.
   -->
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
   <script defer src="https://cloud.umami.is/script.js" data-website-id="eb59c81c-27cb-4e1d-9e8c-bfbe70c48cd9"></script>
 </head>
 <body>
@@ -21,8 +21,8 @@
     <!-- Three-Globe container -->
     <div id="globe-canvas"></div>
 
-    <!-- Status en vragen -->
-    <div id="status">MediaPipe laadt …</div>
+    <!-- Status en vraagbanner -->
+    <div id="status">MediaPipe laadt…</div>
     <div id="question-banner"></div>
 
     <!-- Teams overlays -->
@@ -33,6 +33,7 @@
     <div id="countdown-bar"></div>
   </div>
 
+
   <!-- Links en credits -->
   <p id="links-para">
     <a href="https://robbewulgaert.be" target="_blank">AI in de Klas</a> |
@@ -40,16 +41,15 @@
     <a href="https://buymeacoffee.com/aiindeklas" target="_blank">Trakteer me op koffie ❤️</a>
   </p>
 
-  <!-- MediaPipe en Three.js -->
+  <!-- MediaPipe scripts (globals) -->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
 
-
   <!-- Eigen modules -->
-  <script type="module" src="js/gestures.js"></script>
-  <script type="module" src="js/data.js"></script>
-  <script type="module" src="js/globe.js"></script>
-  <script type="module" src="js/script.js"></script>
+  <script type="module" src="./js/gestures.js"></script>
+  <script type="module" src="./js/data.js"></script>
+  <script type="module" src="./js/globe.js"></script>
+  <script type="module" src="./js/script.js"></script>
 </body>
 </html>
